Python/Automatisering/Task scheduler/logs_for_email_links/Innvandrere - Flyktninger og arbeidsinnvandrere.log
[18.12.2024 13:04:38,61] Running andel_flyktninger_og_arbeidsinnvandrere.py 
Loaded .env file from: D:\Scripts\analyse\Telemark\Python\token.env
X_FUNCTIONS_KEY loaded successfully.
Traceback (most recent call last):
  File "D:\Scripts\analyse\Telemark\Python\Queries\09_Innvandrere_og_inkludering\Innvandrerbefolkningen\andel_flyktninger_og_arbeidsinnvandrere.py", line 14, in <module>
    from Helper_scripts.github_functions import upload_github_file
  File "D:\Scripts\analyse\Telemark\Python\Helper_scripts\github_functions.py", line 349
    else:
    ^
SyntaxError: invalid syntax
[18.12.2024 13:04:40,78] Script failed with error code 1 
